--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
 permalink: hu_luhu_71_rn.html
-keywords: host utilities, centos, linux, 7.8, netapp, ontap
-summary: Describes how to use CentOS 7.8 with ONTAP
+keywords: host utilities, linux, 7.1, netapp, ontap
+summary: Release Notes for Linux Unified Host Utilities 7.1
 ---
 
 = Release Notes for Linux Unified Host Utilities 7.1
@@ -35,8 +35,7 @@ For specific information about the operating system versions and updates that th
 
 The Host Utilities software is provided as both 32-bit and 64-bit .rpm  files. You can download the correct .rpm  file for your host architecture and the documentation from the NetApp Support Site.
 
-For instructions about installing and setting up, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide] and
-link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_79.html[Using Red Hat Enterprise Linux 7.x with ONTAP].
+For instructions about installing and setting up, see the link:https://docs.netapp.com/us-en/ontap-sanhost/hu_luhu_71.html[Linux Unified Host Utilities 7.1 Installation Guide] and link:https://docs.netapp.com/us-en/ontap-sanhost/hu_rhel_79.html[Using Red Hat Enterprise Linux 7.x with ONTAP].
 
 == System requirements
 NetApp qualifies additional components between releases of the Host Utilities software. For the latest information about the system requirements, see the link:https://mysupport.netapp.com/matrix/imt.jsp?components=65623;64703;&solution=1&isHWU&src=IMT[NetApp Interoperability Matrix Tool^].
@@ -48,7 +47,7 @@ Linux Host Utilities is now called _Linux Unified Host Utilities_ because it sup
 [NOTE]
 Any mention of Host Utilities or Linux Host Utilities in this document refers to Linux Unified Host Utilities.
 
-This release of the Linux Unified Host Utilities provides support for a tuned package for setting server profiles and improving I/O performance on Red Hat Enterprise Linux 6  and 7 hosts.
+This release of the Linux Unified Host Utilities provides support for a tuned package for setting server profiles and improving I/O performance on Red Hat Enterprise Linux 6 and 7 hosts.
 
 The Linux Unified Host Utilities 7.1 continues to support versions of the following:
 
@@ -79,7 +78,6 @@ The Release Notes are updated between product releases as new information is ava
 *	The Using Linux Host with ONTAP Storage topic has been updated to include SUSE Linux Enterprise Server 15 series.
 *	Adds support for 32 Gb Fibre Channel adapters from Emulex and Qlogic.
 *	Fixes `sanlun lun show -p getting SIGABRT` in SLES12SP1, OL7.2, RHEL7.2, and RHEL 6.8.
-
 *	Extends support for Red Hat Linux 6.8, Oracle Linux 6.8, XenServer 7.0, Oracle VM 3.3 series, and Oracle VM 3.4 series operating systems.
 
 === Linux Host Utilities 6.1 new features
@@ -88,18 +86,16 @@ The Release Notes are updated between product releases as new information is ava
 
 *	You can now find information relating to ONTAP, SANtricity software in the Release Notes.
 *	The Recommended Host Settings for Linux Unified Host Utilities 7.1 document has been updated to include new information about Oracle VM 3.2 series, Oracle Linux 6 and 7 series, Red Hat Enterprise Linux 6 and 7 series, SUSE Linux Enterprise Server 11 SP4, SUSE Linux Enterprise Server 12 series, KVM and XEN, RHEV 6.4 and 6.5, and Citrix XenServer parameters.
-*	The Using Linux Host with ONTAP Storage document has been updated to include new information about Oracle Linux 6 and 7 series, Red Hat Enterprise Linux 6 and 7 series, SUSE Linux Enterprise Server 11 SP4, SUSE Linux Enterprise Server 12 series, and Citrix XenServer   parameters.
-*	The sanlun fcp show adapter  command displays intermittent `error` text when Linux Host Utilities 6.2 is installed on a Brocade HBA or CNA host.
+*	The Using Linux Host with ONTAP Storage document has been updated to include new information about Oracle Linux 6 and 7 series, Red Hat Enterprise Linux 6 and 7 series, SUSE Linux Enterprise Server 11 SP4, SUSE Linux Enterprise Server 12 series, and Citrix XenServer  parameters.
+*	The `sanlun fcp show adapter` command displays intermittent `error` text when Linux Host Utilities 6.2 is installed on a Brocade HBA or CNA host.
 
 [NOTE]
-For more information, see (Brocade HBA/CNA) sanlun displays intermittent “error” on page 30.#
+For more information, see (Brocade HBA/CNA) sanlun displays intermittent `error` on page 30.
 
 *	The `sanlun` command does not display speed and firmware information with software FCoE on Intel cards.
-(RHEL, FC) `sanlun` does not display speed and firmware information on Intel cards.
-The firmware version and speed of Intel NIC card is not displayed with sanlun fcp show adapter command output.
-The sanlun fcp show adapter command output does not display speed and firmware information about software FCoE with Intel NIC on RHEL hosts.
+(RHEL, FC) `sanlun` does not display speed and firmware information on Intel cards. The firmware version and speed of Intel NIC card is not displayed with `sanlun fcp show adapter` command output. The `sanlun fcp show adapter` command output does not display speed and firmware information about software FCoE with Intel NIC on RHEL hosts.
 +
-_Workaround_: To prevent this problem, use the -fcoeadm command to display the supported speed and firmware information
+_Workaround_: To prevent this problem, use the `-fcoeadm` command to display the supported speed and firmware information.
 
 
 == Known Problems and Limitations
@@ -110,25 +106,18 @@ _Workaround_: To prevent this problem, use the -fcoeadm command to display the s
 |1457017	|sanlun installation warnings for library files.
 |===
 
-== Important Cautions
-
-There are no important cautions.
 
 == About SAN Host Configuration documentation
-Documentation for SAN Host Utilities is included in the ONTAP SAN Host Configuration documentation. ONTAP SAN HOST
-configuration documentation is cumulative, covering all current SAN HOST releases. Any
-functional differences across releases are noted in context.
+Documentation for SAN Host Utilities is included in the ONTAP SAN Host Configuration documentation. ONTAP SAN HOST configuration documentation is cumulative, covering all current SAN HOST releases. Any functional differences across releases are noted in context.
 
 == Default values recommended when using drivers bundled with Linux kernel
-When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a software iSCSI solution , you need to manually set certain  recommended values depending on the OS version you are using.. The recommendations are based on internal testing at NetApp.
-Refer to the “ONTAP SAN Host Configuration documentation for more information on Host OS settings and configurations.
-
+When you are setting up an FC environment that uses the native, inbox drivers that are bundled with the Linux kernel, you can use the default values for the drivers. In iSCSI environments where you are using a iSCSI solution software, you need to manually set certain  recommended values depending on the OS version you are using. The recommendations are based on internal testing at NetApp. Refer to the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[ONTAP SAN Host Configuration documentation] for more information on Host OS settings and configurations.
 
 
 == Ways to view current and fixed product bugs
 
 NetApp provides an online tool that enables you to search for the most current information about a known bug. You can also use this tool, which is available on the NetApp Support Site, to get a list of current or fixed bugs for a particular product.
-Bugs Online on the NetApp Support Site enables you to search for information in the following ways:
+link:https://mysupport.netapp.com/site/bugs-online/product[Bugs Online] on the NetApp Support Site enables you to search for information in the following ways:
 
 *	By entering the bug number
 *	By entering keywords related to the bug
@@ -156,8 +145,7 @@ Before you call technical support, there are several things you can try to solve
 
 
 == Information you must provide to technical support
-Before you contact technical support, you must gather information about your system and your problem.
-You should have the following information available when you contact technical support:
+Before you contact technical support, you must gather information about your system and your problem. You should have the following information available when you contact technical support:
 
 *	Your contact information
 *	A list of all the NetApp products you are using
@@ -171,9 +159,7 @@ You can contact NetApp technical support from the NetApp Support Site.
 
 
 == Where to find product documentation and other information
-You can access documentation for all NetApp products and find other product information
-resources, such as technical reports and white papers on the Product Documentation
-page of the NetApp corporate site.
+You can access documentation for all NetApp products and find other product information resources, such as technical reports and white papers on the Product Documentation page of the NetApp corporate site.
 
 .Related information
 
