--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -17,9 +17,8 @@ summary: Release Notes for Linux Unified Host Utilities 7.1
 [.lead]
 These Release Notes contain the latest information for the Linux Unified Host Utilities 7.1 release, including updates about known problems and limitations, information about tunable parameters, and any important cautions, and new features. The Release Notes also describe any issues that might have been discovered since the Host Utilities were released.
 
-
-== About the 7.1 release of the Linux Unified Host Utilities
-The Linux Unified Host Utilities support several Linux operating systems as well as Veritas Storage  Foundation. The Host Utilities enable you to connect a Linux host to NetApp storage systems.
+== About the Linux Unified Host Utilities 7.1 release
+The Linux Unified Host Utilities support several Linux operating systems as well as Veritas Storage Foundation. The Host Utilities enable you to connect a Linux host to NetApp storage systems.
 
 You can use the Host Utilities with the following versions of Linux:
 
