--- a/hu_luhu_71_rn.adoc
+++ b/hu_luhu_71_rn.adoc
@@ -5,7 +5,7 @@ keywords: host utilities, linux, 7.1, netapp, ontap
 summary: Release Notes for Linux Unified Host Utilities 7.1
 ---
 
-= Release Notes for Linux Unified Host Utilities 7.1
+= Linux Unified Host Utilities 7.1 Release Notes
 :toc: macro
 :hardbreaks:
 :toclevels: 1
@@ -69,7 +69,7 @@ NetApp continues to work with the Host Utilities to add support for features aft
 
 The Release Notes are updated between product releases as new information is available.
 
-=== 7.1 new features
+=== 7.1 enhancements
 
 *	The Recommended Host Settings for Linux Unified Host Utilities 7.1 topic has been updated to include SUSE Linux Enterprise Server 15 series.
 *	The Using Linux Host with ONTAP Storage topic has been updated to include SUSE Linux Enterprise Server 15 series.
